# FlightForesight

./: .gitignore  README.md  conda_env.yaml  requirements.txt
.github/: code_check.yaml
.github/workflows/: code_check.yml
assets/datasets/: README.md
assets/models/: model.pkl
assets/notebooks/: README.md  build_model.ipynb  to-expose(edited).ipynb
flightforesight_api/: setup.cfg
flightforesight_api/flightforesight_api/: __init__.py  server.py  settings.py
flightforesight_api/flightforesight_api/routes/: __init__.py  routes.py
flightforesight_api/flightforesight_api/utils/: __init__.py  encoding_dict.py  flask_utils.py  routes_utils.py
flightforesight_api/scripts/: run_flask_server.sh  stress_test.lua
