[metadata]
name = Flight Foresight
version = attr: flightforesight_api.__version__
description = Flight Foresight API Framework
long_description = file: README.md
log_description_content_type = text/markdown
url = https://github.com/betogaona7/FlightForesight
classifiers =
  Programming Language :: Python :: 3.10

[options]
package_dir =
  = .
packages = find:
python_requires = >=3.10
install_requires =
  flask-restx
  pandas
  matplotlib
  seaborn
  missingno 
  scikit-learn
  imblearn
  xgboost

[options.packages.find]
where = .